container class added

--- a/railsforangular/app/views/welcome/index.html.erb
+++ b/railsforangular/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Hello, Rails!</h1>
-<h2>Creating basic form validation</h2>
+<main class="container">
+    <h1>Hello, Rails!</h1>
+    <h2>Creating basic form validation</h2>
+</main>
