--- a/railsforangular/app/views/layouts/application.html.erb
+++ b/railsforangular/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <nav>
+      <h2 class="navbar">navbar to be added</h2>
+    </nav>
     <%= yield %>
   </body>
 </html>
