--- a/railsforangular/app/views/welcome/index.html.erb
+++ b/railsforangular/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <main class="container">
-    <h1>Hello, Rails!</h1>
+    <h1 class="jumbotron">Hello, Rails!</h1>
     <h2>Creating basic form validation</h2>
 </main>
